# referral_system

./: .env.exemple  Procfile  README.md  docker-compose.yaml  pyproject.toml
app/: celery.py  settings.py  urls.py
userApp/: models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
userApp/management/commands/: csu.py
userApp/migrations/: 0001_initial.py
